k8s/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
